--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.assafbt.projects.memorygame"
         minSdkVersion 25
         targetSdkVersion 29
-        versionCode 7
-        versionName "1.4.29"
+        versionCode 8
+        versionName "1.5.29"
     }
     buildTypes {
         release {
@@ -24,10 +24,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     //implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     //new
     implementation 'androidx.appcompat:appcompat:1.2.0'
